--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,10 @@ html
     link(rel: 'stylesheet', media: 'print',  href: '/stylesheets/print.css')
     link(rel: 'stylesheet', href: '/stylesheets/screen.css')
     link(rel: 'stylesheet', href: '/stylesheets/style.css')
+    link(rel: 'stylesheet', href: '/js/fancybox/jquery.fancybox-1.3.4.css')
     script(type: 'text/javascript', src: '/js/jquery.js')
-    script(type: 'text/javascript', src: '/js/admin.js')
+    script(type: 'text/javascript', src: '/js/global.js')
+    script(type: 'text/javascript', src: '/js/fancybox/jquery.fancybox-1.3.4.pack.js')
     title!= siteName
   body
     #main(class: 'container')
