Revised gitignore; Blog image styles;

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -70,6 +70,7 @@ code {
   padding: 0.5em;
   margin-top: 0.5em;
   margin-bottom: 0.5em;
+  overflow: auto;
 }
 
 /** Form Items **/
@@ -88,6 +89,8 @@ code {
   width: 200px;
   align: right;
 }
+
+/** Images **/
 
 /** Menu **/
 nav {
