Some template changes

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,3 +19,6 @@ html
             #flash!= partial('flash')
         #body!= body
       div(class: 'span-6 append-1 last')!= partial('right_col')
+    #footer(class: 'container')
+      div(class: 'span 15 prepend-1 append-1  last')
+        footer!= partial('footer')
