--- a/views/right_col.jade
+++ b/views/right_col.jade
@@ -1,1 +1,1 @@
-p.about-me All about Kevin Hankens...
+p.about-me Hi, my name is Kevin. I'm a software guy living in Salem, Mass. I work with PHP, Ruby, Javascript, MySQL, MongoDB and some other stuff. When I'm not on the laptop I spend all of my time with my wife <a href="http://melentine.com">Melissa</a> and son <a href="http://theadventuresofmelvin.com">Benjamin</a> renovating our <a href="http://theadventuresofmelvin.com/content/one-room-down">260-year-old home</a>.
