--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,16 @@ html
     script(type: 'text/javascript', src: '/js/global.js')
     script(type: 'text/javascript', src: '/js/fancybox/jquery.fancybox-1.3.4.pack.js')
     title!= siteName
+    script(type: 'text/javascript')
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-5145052-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
   body
     #main(class: 'container')
       div(class: 'span-15 prepend-1 append-1 last')
